--- a/src/app/components/more/more.component.html
+++ b/src/app/components/more/more.component.html
@@ -1,5 +1,14 @@
 <div class="cont">
-    <div class="container">
-        <p>more works</p>
-</div>
+  <div class="container">
+    <div class="text-center">
+      <span class="topic mt-5"><h3 class="h-sz-prm">More</h3></span>
+      <div class="pt-5 pb-5">
+        <p>
+          I have completed all the mentioned projects and now looking forward to
+          host them. Once I'll host them I'll come up with more details and even
+          testimonies for a couple of businesses that i'm currently working for.
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
