added navbar for mobile devices and edited package.json

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
 <div style="height:30vh; width:100%; background-color:black; color:white;" class="text-center">
-    <p style="padding-top:5rem;"> © copyright 2021 | All rights reserved</p>
+    <p style="padding-top:5rem;">mcspraint954@gmail.com</p>
+    <p> © copyright 2021 | All rights reserved</p>
 </div>
