--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -65,3 +65,10 @@
   color: blue;
   background-color: red;
 }
+@media (min-width: 700px) {
+  .navmobile {
+    display: none;
+    z-index:2;
+  }
+  
+}
