--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,3 +12,22 @@
 	</ul>
 </div>
 <div id="nav2"></div>
+
+<nav class="navmobile navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: rgb(24, 23, 23);">
+	<a class="navbar-brand" href="#">Navbar</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	  <span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarNav">
+	  <ul class="navbar-nav">
+		<li class="nav-item">
+		  <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
+		</li>
+		<div *ngFor="let p of appPages;">
+		<li class="nav-item">
+			<a class="nav-link" [routerLink]="p.url">{{p.title}}</a>
+		</li>
+		</div>
+	  </ul>
+	</div>
+  </nav>
