fixed some bugs related animation

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
 </div>
 <div id="nav2"></div>
 
-<nav class="navmobile navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: rgb(24, 23, 23);">
+<nav class="navmobile navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: rgb(24, 23, 23); width:100vw !important;">
 	<a class="navbar-brand" routerLink="/home">Mc-Spraint</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	  <span class="navbar-toggler-icon"></span>
