--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,13 +4,11 @@
     <div class="text-center">
       <span class="topic mt-5"><h3 class="h-sz-prm">About</h3></span>
     </div>
-    <div class="row pt-5 pb-5">
-      <div class="col-md-6 col-sm-6 mx-auto pt-4" data-aos="zoom-in-up" 
-      data-aos-easing="ease-in-sine">
+    <div class="row pt-5 pb-5" data-aos="zoom-in">
+      <div class="col-md-6 col-sm-6 mx-auto pt-4">
         <img src="/assets/images/about.png" alt="mypic" class="img-fluid">
       </div>
-      <div class="col-md-6 col-sm-6 mx-auto pt-4" data-aos="zoom-in-down" 
-      data-aos-easing="ease-in-sine">
+      <div class="col-md-6 col-sm-6 mx-auto pt-4">
         <h5 class="h-sz-prm">Welcome beautiful people!</h5>
         <i>My name is Snehashis Das A.K.A Mc Spraint.
           I'm a fullstack(MEAN) developer from malda.
