--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -4,7 +4,7 @@
       <span class="topic mt-5"><h3 class="h-sz-prm">Pojects</h3></span>
     </div>
     <div class="row pt-5 pb-5">
-      <div class="col-sm-6 col-md-6 col-lg-6 pt-4 hover" data-aos="flip-left">
+      <div class="col-sm-6 col-md-6 col-lg-6 pt-4 hover" data-aos="flip-up">
         <a href="/assets/images/portfolio.png">
         <img src="/assets/images/portfolio.png" alt="Portfolio" class="img-fluid">
         </a> 
@@ -12,14 +12,13 @@
         
       </div>
 
-      <div class="col-sm-6 col-md-6 col-lg-6 pt-4 hover" data-aos="flip-left">
+      <div class="col-sm-6 col-md-6 col-lg-6 pt-4 hover" data-aos="flip-down">
         <a href="/assets/images/restaurant.png"><img src="/assets/images/restaurant.png" alt="Restaurant" class="img-fluid"></a>
         <b class="h-sz-prm">Restaurant(LAMP Stack)</b>
         
       </div>
 
-      <div class="col-sm-6 col-md-6 col-lg-6 pt-4 hover" data-aos="fade-right" 
-      data-aos-easing="ease-in-sine">
+      <div class="col-sm-6 col-md-6 col-lg-6 pt-4 hover" data-aos="flip-down">
         <a href="/assets/images/ecom.png">
         <img src="/assets/images/ecom.png" alt="E-Commerce" class="img-fluid">
         </a>
@@ -27,8 +26,7 @@
         
       </div> 
 
-      <div class="col-sm-6 col-md-6 col-lg-6 pt-4 hover" data-aos="fade-left"
-      data-aos-easing="ease-in-sine">
+      <div class="col-sm-6 col-md-6 col-lg-6 pt-4 hover" data-aos="flip-down">
         <a href="/assets/images/chatapp.png">
         <img src="/assets/images/chatapp.png" alt="Chat-App" class="img-fluid">
         </a>
