--- a/src/app/components/home-starter/home-starter.component.html
+++ b/src/app/components/home-starter/home-starter.component.html
@@ -13,7 +13,7 @@
         <div class="bla">
         <h1 class="h-sz-prm">Hi!</h1> 
         <h3>I'm Spraint.
-          I'm a MEAN & MERN stack software developer with 3+ years experience working in pietech solution, bangalore.</h3>
+          I'm a MEAN & MERN stack software developer with 3+ years experience working at Buzzworks currently in bangalore.</h3>
         <br/>  
         </div>    
         <a href="tel:+917602746149"><button class="bttn-g-s bttn-g-pill">Contact Me</button></a>
